Archive2/c1/313cb6abf4ae99/output
main.cpp:34:3: error: static_assert failed "More than 4 arguments are not allowed"
  static_assert( function_traits<Ret>::arity <= 4,
  ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:45:5: note: in instantiation of template class 'MemberWrapper<void (Test::*)(int, int, double, float, int) const &>' requested here
    MemberWrapper< decltype(&Test::f) >();
    ^
1 error generated.
